UtahLiveDataTest/src/objects/EventRelation__c.object
<CustomObject>
    <fields>
        <fullName>EventId__c</fullName>
        <label>EventId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventRelationId__c</fullName>
        <label>EventRelationId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EventRelations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tentative</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>EventRelation</label>
    <nameField>
        <label>EventRelation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EventRelations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>